--- a/ctru-sys/Cargo.toml
+++ b/ctru-sys/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "ctru-sys"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Ronald Kinard <furyhunter600@gmail.com>"]
 license = "https://en.wikipedia.org/wiki/Zlib_License"
+links = "ctru"
 
 [dependencies]
 ctr-libc = { path = "../ctr-libc" }
+
+[build-dependencies]
+bindgen = "0.25"
